--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -37,8 +37,7 @@ configmapReload:
 
   ## env sets environment variables to pass to the container. Can be set as name/value pairs,
   ## read from secrets or configmaps.
-  env:
-    []
+  env: []
     # - name: SOMEVAR
     #   value: somevalue
     # - name: PASSWORD
@@ -85,8 +84,7 @@ configmapReload:
 
     ## Additional configmap-reload mounts
     ##
-    extraConfigmapMounts:
-      []
+    extraConfigmapMounts: []
       # - name: prometheus-alerts
       #   mountPath: /etc/alerts.d
       #   subPath: ""
@@ -289,14 +287,12 @@ server:
 
   ## https://prometheus.io/docs/prometheus/latest/configuration/configuration/#tsdb
   ##
-  tsdb:
-    {}
+  tsdb: {}
     # out_of_order_time_window: 0s
 
   ## https://prometheus.io/docs/guides/opentelemetry
   ##
-  otlp:
-    {}
+  otlp: {}
     # promote_resource_attributes: []
     # keep_identifying_resource_attributes: false
     # translation_strategy: NoUTF8EscapingWithSuffixes
@@ -304,23 +300,20 @@ server:
   ## https://prometheus.io/docs/prometheus/latest/configuration/configuration/#exemplars
   ## Must be enabled via --enable-feature=exemplar-storage
   ##
-  exemplars:
-    {}
+  exemplars: {}
     # max_exemplars: 100000
 
   ## Custom HTTP headers for Liveness/Readiness/Startup Probe
   ##
   ## Useful for providing HTTP Basic Auth to healthchecks
-  probeHeaders:
-    []
+  probeHeaders: []
     # - name: "Authorization"
     #   value: "Bearer ABCDEabcde12345"
 
   ## Additional Prometheus server container arguments
   ## Set to null for argumentless flags
   ##
-  extraArgs:
-    {}
+  extraArgs: {}
     # web.enable-remote-write-receiver: null
 
   ## Additional InitContainers to initialize the pod
@@ -337,16 +330,14 @@ server:
 
   ## Additional Prometheus server hostPath mounts
   ##
-  extraHostPathMounts:
-    []
+  extraHostPathMounts: []
     # - name: certs-dir
     #   mountPath: /etc/kubernetes/certs
     #   subPath: ""
     #   hostPath: /etc/kubernetes/certs
     #   readOnly: true
 
-  extraConfigmapMounts:
-    []
+  extraConfigmapMounts: []
     # - name: certs-configmap
     #   mountPath: /prometheus
     #   subPath: ""
@@ -355,8 +346,7 @@ server:
 
   ## Additional Prometheus server Secret mounts
   # Defines additional mounts with secrets. Secrets must be manually created in the namespace.
-  extraSecretMounts:
-    []
+  extraSecretMounts: []
     # - name: secret-files
     #   mountPath: /etc/secrets
     #   subPath: ""
@@ -447,15 +437,13 @@ server:
       labels: {}
 
       ## ParentRefs refers to resources this HTTPRoute is to be attached to (Gateways)
-      parentRefs:
-        []
+      parentRefs: []
         # - name: contour
         #   sectionName: http
 
       ## Hostnames (templated) defines a set of hostnames that should match against the HTTP Host
       ## header to select a HTTPRoute used to process the request
-      hostnames:
-        []
+      hostnames: []
         # - my.example.com
 
       ## additionalRules (templated) allows adding custom rules to the route
@@ -491,8 +479,7 @@ server:
   ## Node tolerations for server scheduling to nodes with taints
   ## Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
   ##
-  tolerations:
-    []
+  tolerations: []
     # - key: "key"
     #   operator: "Equal|Exists"
     #   value: "value"
@@ -614,8 +601,7 @@ server:
 
   ## Annotations to be added to Prometheus server pods
   ##
-  podAnnotations:
-    {}
+  podAnnotations: {}
     # iam.amazonaws.com/role: prometheus
 
   ## Labels to be added to Prometheus server pods
@@ -630,8 +616,7 @@ server:
   ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
   ##
   podSecurityPolicy:
-    annotations:
-      {}
+    annotations: {}
       ## Specify pod annotations
       ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
       ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
@@ -713,8 +698,7 @@ server:
   ## Prometheus server resource requests and limits
   ## Ref: http://kubernetes.io/docs/user-guide/compute-resources/
   ##
-  resources:
-    {}
+  resources: {}
     # limits:
     #   cpu: 500m
     #   memory: 512Mi
@@ -746,8 +730,7 @@ server:
     # - containerName: 'prometheus-server'
 
   # Custom DNS configuration to be added to prometheus server pods
-  dnsConfig:
-    {}
+  dnsConfig: {}
     # nameservers:
     #   - 1.2.3.4
     # searches:
@@ -862,7 +845,7 @@ serverFiles:
     rule_files:
       - /etc/config/recording_rules.yml
       - /etc/config/alerting_rules.yml
-      ## Below two files are DEPRECATED will be removed from this default values file
+    ## Below two files are DEPRECATED will be removed from this default values file
       - /etc/config/rules
       - /etc/config/alerts
 
@@ -870,7 +853,7 @@ serverFiles:
       - job_name: prometheus
         static_configs:
           - targets:
-              - localhost:9090
+            - localhost:9090
 
       # A scrape configuration for running Prometheus on a Kubernetes cluster.
       # This uses separate scrape configs for cluster components (i.e. API server, node)
@@ -886,7 +869,7 @@ serverFiles:
       # the endpoints associated with the default/kubernetes service using the
       # default named port `https`. This works for single API server deployments as
       # well as HA API server deployments.
-      - job_name: "kubernetes-apiservers"
+      - job_name: 'kubernetes-apiservers'
 
         kubernetes_sd_configs:
           - role: endpoints
@@ -916,16 +899,11 @@ serverFiles:
         # will add targets for each API server which Kubernetes adds an endpoint to
         # the default/kubernetes service.
         relabel_configs:
-          - source_labels:
-              [
-                __meta_kubernetes_namespace,
-                __meta_kubernetes_service_name,
-                __meta_kubernetes_endpoint_port_name,
-              ]
+          - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
             action: keep
             regex: default;kubernetes;https
 
-      - job_name: "kubernetes-nodes"
+      - job_name: 'kubernetes-nodes'
 
         # Default to scraping over https. If required, just disable this or change to
         # `http`.
@@ -961,7 +939,8 @@ serverFiles:
             target_label: __metrics_path__
             replacement: /api/v1/nodes/$1/proxy/metrics
 
-      - job_name: "kubernetes-nodes-cadvisor"
+
+      - job_name: 'kubernetes-nodes-cadvisor'
 
         # Default to scraping over https. If required, just disable this or change to
         # `http`.
@@ -1022,36 +1001,28 @@ serverFiles:
       # service then set this appropriately.
       # * `prometheus.io/param_<parameter>`: If the metrics endpoint uses parameters
       # then you can set any parameter
-      - job_name: "kubernetes-service-endpoints"
+      - job_name: 'kubernetes-service-endpoints'
         honor_labels: true
 
         kubernetes_sd_configs:
           - role: endpoints
 
         relabel_configs:
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_scrape]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
             action: keep
             regex: true
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_scrape_slow]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape_slow]
             action: drop
             regex: true
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_scheme]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
             action: replace
             target_label: __scheme__
             regex: (https?)
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_path]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_path]
             action: replace
             target_label: __metrics_path__
             regex: (.+)
-          - source_labels:
-              [
-                __address__,
-                __meta_kubernetes_service_annotation_prometheus_io_port,
-              ]
+          - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_port]
             action: replace
             target_label: __address__
             regex: (.+?)(?::\d+)?;(\d+)
@@ -1085,7 +1056,7 @@ serverFiles:
       # service then set this appropriately.
       # * `prometheus.io/param_<parameter>`: If the metrics endpoint uses parameters
       # then you can set any parameter
-      - job_name: "kubernetes-service-endpoints-slow"
+      - job_name: 'kubernetes-service-endpoints-slow'
         honor_labels: true
 
         scrape_interval: 5m
@@ -1095,25 +1066,18 @@ serverFiles:
           - role: endpoints
 
         relabel_configs:
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_scrape_slow]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape_slow]
             action: keep
             regex: true
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_scheme]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
             action: replace
             target_label: __scheme__
             regex: (https?)
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_path]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_path]
             action: replace
             target_label: __metrics_path__
             regex: (.+)
-          - source_labels:
-              [
-                __address__,
-                __meta_kubernetes_service_annotation_prometheus_io_port,
-              ]
+          - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_port]
             action: replace
             target_label: __address__
             regex: (.+?)(?::\d+)?;(\d+)
@@ -1133,15 +1097,14 @@ serverFiles:
             action: replace
             target_label: node
 
-      - job_name: "prometheus-pushgateway"
+      - job_name: 'prometheus-pushgateway'
         honor_labels: true
 
         kubernetes_sd_configs:
           - role: service
 
         relabel_configs:
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_probe]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
             action: keep
             regex: pushgateway
 
@@ -1151,7 +1114,7 @@ serverFiles:
       # via the following annotations:
       #
       # * `prometheus.io/probe`: Only probe services that have a value of `true`
-      - job_name: "kubernetes-services"
+      - job_name: 'kubernetes-services'
         honor_labels: true
 
         metrics_path: /probe
@@ -1162,8 +1125,7 @@ serverFiles:
           - role: service
 
         relabel_configs:
-          - source_labels:
-              [__meta_kubernetes_service_annotation_prometheus_io_probe]
+          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
             action: keep
             regex: true
           - source_labels: [__address__]
@@ -1190,23 +1152,20 @@ serverFiles:
       # to set this to `https` & most likely set the `tls_config` of the scrape config.
       # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
       # * `prometheus.io/port`: Scrape the pod on the indicated port instead of the default of `9102`.
-      - job_name: "kubernetes-pods"
+      - job_name: 'kubernetes-pods'
         honor_labels: true
 
         kubernetes_sd_configs:
           - role: pod
 
         relabel_configs:
-          - source_labels:
-              [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
             action: keep
             regex: true
-          - source_labels:
-              [__meta_kubernetes_pod_annotation_prometheus_io_scrape_slow]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape_slow]
             action: drop
             regex: true
-          - source_labels:
-              [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
             action: replace
             regex: (https?)
             target_label: __scheme__
@@ -1214,20 +1173,12 @@ serverFiles:
             action: replace
             target_label: __metrics_path__
             regex: (.+)
-          - source_labels:
-              [
-                __meta_kubernetes_pod_annotation_prometheus_io_port,
-                __meta_kubernetes_pod_ip,
-              ]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_port, __meta_kubernetes_pod_ip]
             action: replace
             regex: (\d+);(([A-Fa-f0-9]{1,4}::?){1,7}[A-Fa-f0-9]{1,4})
-            replacement: "[$2]:$1"
+            replacement: '[$2]:$1'
             target_label: __address__
-          - source_labels:
-              [
-                __meta_kubernetes_pod_annotation_prometheus_io_port,
-                __meta_kubernetes_pod_ip,
-              ]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_port, __meta_kubernetes_pod_ip]
             action: replace
             regex: (\d+);((([0-9]+?)(\.|$)){4})
             replacement: $2:$1
@@ -1261,7 +1212,7 @@ serverFiles:
       # to set this to `https` & most likely set the `tls_config` of the scrape config.
       # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
       # * `prometheus.io/port`: Scrape the pod on the indicated port instead of the default of `9102`.
-      - job_name: "kubernetes-pods-slow"
+      - job_name: 'kubernetes-pods-slow'
         honor_labels: true
 
         scrape_interval: 5m
@@ -1271,12 +1222,10 @@ serverFiles:
           - role: pod
 
         relabel_configs:
-          - source_labels:
-              [__meta_kubernetes_pod_annotation_prometheus_io_scrape_slow]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape_slow]
             action: keep
             regex: true
-          - source_labels:
-              [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
             action: replace
             regex: (https?)
             target_label: __scheme__
@@ -1284,20 +1233,12 @@ serverFiles:
             action: replace
             target_label: __metrics_path__
             regex: (.+)
-          - source_labels:
-              [
-                __meta_kubernetes_pod_annotation_prometheus_io_port,
-                __meta_kubernetes_pod_ip,
-              ]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_port, __meta_kubernetes_pod_ip]
             action: replace
             regex: (\d+);(([A-Fa-f0-9]{1,4}::?){1,7}[A-Fa-f0-9]{1,4})
-            replacement: "[$2]:$1"
+            replacement: '[$2]:$1'
             target_label: __address__
-          - source_labels:
-              [
-                __meta_kubernetes_pod_annotation_prometheus_io_port,
-                __meta_kubernetes_pod_ip,
-              ]
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_port, __meta_kubernetes_pod_ip]
             action: replace
             regex: (\d+);((([0-9]+?)(\.|$)){4})
             replacement: $2:$1
@@ -1323,8 +1264,7 @@ serverFiles:
 # adds additional scrape configs to prometheus.yml
 # must be a string so you have to add a | after extraScrapeConfigs:
 # example adds prometheus-blackbox-exporter scrape config
-extraScrapeConfigs:
-  ""
+extraScrapeConfigs: ""
   # - job_name: 'prometheus-blackbox-exporter'
   #   metrics_path: /probe
   #   params:
@@ -1342,8 +1282,7 @@ extraScrapeConfigs:
 
 # Adds option to add alert_relabel_configs to avoid duplicate alerts in alertmanager
 # useful in H/A prometheus with different external labels but the same alerts
-alertRelabelConfigs:
-  {}
+alertRelabelConfigs: {}
   # alert_relabel_configs:
   # - source_labels: [dc]
   #   regex: (.+)\d+
@@ -1358,8 +1297,7 @@ networkPolicy:
 forceNamespace: ""
 
 # Extra manifests to deploy as an array
-extraManifests:
-  []
+extraManifests: []
   # - |
   #   apiVersion: v1
   #   kind: ConfigMap
