[prometheus] drop support for deprecated ingress version (#5684)
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -376,9 +376,7 @@ server:
     ##
     enabled: false
 
-    # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
-    # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
-    # ingressClassName: nginx
+    ingressClassName: ""
 
     ## Prometheus server Ingress annotations
     ##
