[prometheus-node-exporter] Add extra rules for Node Exporter ClusterRole
fix rbac templates

Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/prometheus-node-exporter/templates/clusterrole.yaml
+++ b/charts/prometheus-node-exporter/templates/clusterrole.yaml
@@ -1,4 +1,4 @@
-{{- if (eq .Values.rbac.create true) -}}
+{{- if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
