--- a/charts/prometheus-node-exporter/templates/clusterrolebinding.yaml
+++ b/charts/prometheus-node-exporter/templates/clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if (eq .Values.rbac.create true) -}}
+{{- if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -8,11 +8,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-{{- if .Values.rbac.useExistingRole }}
-  name: {{ .Values.rbac.useExistingRole }}
-{{- else }}
   name: {{ template "prometheus-node-exporter.fullname" . }}
-{{- end }}
 subjects:
 - kind: ServiceAccount
   name: {{ template "prometheus-node-exporter.serviceAccountName" . }}
