[kube-prometheus-stack] fix: Ensure deduplication of `InfoInhibitor` alerts
When two alerts with `info=severity` are raised in the same namespace
(or namespace and other matching criteria as defined in
`additionalAggregationLabels`), it is possible for the current
`InfoInhibitor` rule to create two alerts with exactly the same labels.
This results in the error reported in #1773 of duplicate label vectors,
and also an increase in the number of rules failures which can lead to
the default `PrometheusRuleFailures` alert also firing.

This fix changes the `InfoInhibitor` rule to aggregate its data based
on the user's selected aggregation labels (plus the enforced namespace
aggregation). This will ensure at most one alert can be created in the
aggregation.

Fixes #1773
kube-prometheus-stack bumped to v72.9.2

Signed-off-by: Benedict Harcourt <benedict.harcourt@futurenet.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/general.rules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/general.rules.yaml
@@ -110,7 +110,12 @@ spec:
           '
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/general/infoinhibitor
         summary: Info-level alert inhibition.
-      expr: ALERTS{severity = "info"} == 1 unless on ({{ range $.Values.defaultRules.additionalAggregationLabels }}{{ . }},{{ end }}namespace) ALERTS{alertname != "InfoInhibitor", severity =~ "warning|critical", alertstate="firing"} == 1
+      expr: >-
+        count by ({{ range $.Values.defaultRules.additionalAggregationLabels }}{{ . }},{{ end }}namespace) (
+          ALERTS{severity = "info"} == 1
+          unless on ({{ range $.Values.defaultRules.additionalAggregationLabels }}{{ . }},{{ end }}namespace)
+          ALERTS{alertname != "InfoInhibitor", severity =~ "warning|critical", alertstate="firing"} == 1
+        ) > 0
       labels:
         severity: {{ dig "InfoInhibitor" "severity" "none" .Values.customRules }}
       {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.general }}
