[prometheus-blackbox-exporter] adjust examples in values.yaml
Signed-off-by: Jakob Hahn <jakob.hahn@hetzner.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -24,27 +24,23 @@ podDisruptionBudget: {}
 automountServiceAccountToken: false
 
 ## Additional blackbox-exporter container environment variables
-## For instance to add a http_proxy
-##
-## extraEnv:
-##   - name: GOMAXPROCS
-##     valueFrom:
-##       resourceFieldRef:
-##         resource: limits.cpu
-##         divisor: "1"
-##   - name: HTTP_PROXY
-##     value: "http://superproxy.com:3128"
 extraEnv: []
+  # - name: GOMAXPROCS
+  #   valueFrom:
+  #     resourceFieldRef:
+  #       resource: limits.cpu
+  #       divisor: "1"
+  # - name: HTTP_PROXY
+  #   value: "http://superproxy.com:3128"
 
 ## Additional blackbox-exporter container environment variables for secret or configMap
-## extraEnvFrom:
-##   - configMapRef:
-##       name: configMapOne
-##   - secretRef:
-##       name: secretOne
-##   - secretRef:
-##       name: secretTwo
 extraEnvFrom: []
+  # - configMapRef:
+  #     name: configMapOne
+  # - secretRef:
+  #     name: secretOne
+  # - secretRef:
+  #     name: secretTwo
 
 extraVolumes: []
   # - name: secret-blackbox-oauth-htpasswd
