--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -384,7 +384,7 @@ networkPolicy:
   # Network Policy uses label filtering
   allowMonitoringNamespace: false
   # Rewrite monitoring namespace in network policy (default value monitoring)
-  monitoringNamespaceName: ""
+  monitoringNamespaceName: "monitoring"
 
 ## dnsPolicy and dnsConfig for Deployments and Daemonsets if you want non-default settings.
 ## These will be passed directly to the PodSpec of same.
