[kube-state-metrics]: reenable Probes
Signed-off-by: yellowhat <1692490+yellowhat@users.noreply.github.com>

--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -50,6 +50,7 @@ revisionHistoryLimit: 10
 # List of additional cli arguments to configure kube-state-metrics
 # for example: --enable-gzip-encoding, --log-file, etc.
 # all the possible args can be found here: https://github.com/kubernetes/kube-state-metrics/blob/master/docs/cli-arguments.md
+# Add: "--ignore-paths=/livez,/readyz" for livenessProbe and readinessProbe
 extraArgs: []
 
 # If false then the user will opt out of automounting API credentials.
