--- a/charts/prometheus-elasticsearch-exporter/Chart.yaml
+++ b/charts/prometheus-elasticsearch-exporter/Chart.yaml
@@ -3,6 +3,7 @@ description: Elasticsearch stats exporter for Prometheus
 name: prometheus-elasticsearch-exporter
 version: 6.7.3
 kubeVersion: ">=1.19.0-0"
+# renovate: github=prometheus-community/elasticsearch_exporter
 appVersion: "v1.9.0"
 home: https://github.com/prometheus-community/elasticsearch_exporter
 sources:
