Adding a chomp to clean up un-needed new lines Signed-off-by: Greg Sharpe <git+me@gregsharpe.co.uk>
Signed-off-by: Greg Sharpe <git+me@gregsharpe.co.uk>

--- a/charts/prom-label-proxy/templates/deployment.yaml
+++ b/charts/prom-label-proxy/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "prom-label-proxy.labels" . | nindent 4 }}
 spec:
-  {{ if not .Values.autoscaling.enabled }}
+  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
