redo commit history
Signed-off-by: TheRealNoob <mike1118@live.com>

--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -33,6 +33,8 @@ webhooks:
   ## Additional labels and annotations for webhook configurations
   labels: {}
   annotations: {}
+    # "helm.sh/hook": pre-install,pre-upgrade
+    # "helm.sh/hook-weight": "1"
 
 ## jobs enables creation of a TLS keypair and a patch of webhook configurations.
 ## Jobs and related resources are hooks. Their output is a TLS key pair
@@ -41,6 +43,19 @@ webhooks:
 ## whilst cert-manager or tlsSecret is enabled.
 jobs:
   enabled: true
+
+  ## Settings unique to the `createSecret` Job
+  createSecret:
+    annotations: {}
+      # "helm.sh/hook-weight": "0"
+    labels: {}
+
+  ## Settings unique to the `patchWebhook` Job
+  patchWebhook:
+    annotations: {}
+      # "helm.sh/hook": pre-install,pre-upgrade
+      # "helm.sh/hook-weight": "2"
+    labels: {}
 
   ## Additional labels and annotations
   annotations: {}
