--- a/charts/prometheus-operator-admission-webhook/templates/hooks/job-createSecret.yaml
+++ b/charts/prometheus-operator-admission-webhook/templates/hooks/job-createSecret.yaml
@@ -10,15 +10,12 @@ metadata:
   name:  {{ template "prometheus-operator-admission-webhook.fullname" . }}-create
   namespace: {{ template "prometheus-operator-admission-webhook.namespace" . }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-    {{- with .Values.jobs.annotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- $defaultAnnotations := dict "helm.sh/hook" "pre-install,pre-upgrade" "helm.sh/hook-delete-policy" "before-hook-creation,hook-succeeded" }}
+    {{- mustMerge .Values.jobs.createSecret.annotations .Values.jobs.annotations $defaultAnnotations | toYaml | nindent 4 }}
   labels:
     app: {{ include "prometheus-operator-admission-webhook.fullname" . }}-aux
     {{- include "prometheus-operator-admission-webhook.labels" . | nindent 4 }}
-    {{- with .Values.jobs.labels }}
+    {{- with (mustMerge .Values.jobs.createSecret.labels .Values.jobs.labels) }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
@@ -35,7 +32,7 @@ spec:
       labels:
         app: {{ include "prometheus-operator-admission-webhook.fullname" . }}-aux
         {{- include "prometheus-operator-admission-webhook.labels" . | nindent 8 }}
-        {{- with .Values.jobs.labels }}
+        {{- with (mustMerge .Values.jobs.createSecret.labels .Values.jobs.labels) }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
