remove erroneous colon
Signed-off-by: TheRealNoob <mike1118@live.com>

--- a/charts/prometheus-operator-admission-webhook/templates/hooks/job-patchWebhook.yaml
+++ b/charts/prometheus-operator-admission-webhook/templates/hooks/job-patchWebhook.yaml
@@ -10,7 +10,7 @@ metadata:
   name:  {{ template "prometheus-operator-admission-webhook.fullname" . }}-patch
   namespace: {{ template "prometheus-operator-admission-webhook.namespace" . }}
   annotations:
-    {{- $defaultAnnotations := dict "helm.sh/hook" "post-install,post-upgrade" "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded" }}
+    {{- $defaultAnnotations := dict "helm.sh/hook" "post-install,post-upgrade" "helm.sh/hook-delete-policy" "before-hook-creation,hook-succeeded" }}
     {{- mustMerge .Values.jobs.patchWebhook.annotations .Values.jobs.annotations $defaultAnnotations | toYaml | nindent 4 }}
   labels:
     app: {{ include "prometheus-operator-admission-webhook.fullname" . }}-aux
