update default config

--- a/charts/postgresql/values.yaml
+++ b/charts/postgresql/values.yaml
@@ -333,7 +333,9 @@ primary:
   ## @param primary.extendedConfiguration Extended PostgreSQL Primary configuration (appended to main or default configuration)
   ## ref: https://github.com/bitnami/containers/tree/main/bitnami/postgresql#allow-settings-to-be-loaded-from-files-other-than-the-default-postgresqlconf
   ##
-  extendedConfiguration: ""
+  # extendedConfiguration: ""
+  extendedConfiguration: |
+    track_io_timing = on
   ## @param primary.existingExtendedConfigmap Name of an existing ConfigMap with PostgreSQL Primary extended configuration
   ## NOTE: `primary.extendedConfiguration` will be ignored
   ##
